// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal component renders correctly default 1`] = `
<ModalView
  isVisible={true}
  onModalHide={[Function]}
>
  <WithTheme(ModalHeader)
    isClosable={true}
    onClose={[MockFunction]}
  >
    <FormattedMessage
      id="test_title_id"
    />
  </WithTheme(ModalHeader)>
  <ModalBody>
    <Styled(Text)
      key="test_body_1"
    >
      <FormattedMessage
        id="test_body_1"
      />
    </Styled(Text)>
    <Styled(Text)
      key="test_body_1"
    >
      <FormattedMessage
        id="test_body_1"
      />
    </Styled(Text)>
  </ModalBody>
  <ModalFooter>
    <Button
      disabled={false}
      isBorder={false}
      isLoading={false}
      isMarginBottom={false}
      isMarginRight={true}
      isOutline={true}
      isSmallHeight={false}
      isSmallWidth={true}
      onPress={[MockFunction]}
    >
      <FormattedMessage
        id="test_dismiss_id"
      />
    </Button>
    <Button
      disabled={false}
      fillColor="[mocked red500]"
      isBorder={false}
      isLoading={false}
      isMarginBottom={false}
      isMarginRight={false}
      isOutline={false}
      isSmallHeight={false}
      isSmallWidth={false}
    >
      <FormattedMessage
        id="test_confirm_id"
      />
    </Button>
  </ModalFooter>
</ModalView>
`;

exports[`ConfirmModal component renders correctly with default dismiss button 1`] = `
<ModalView
  isVisible={true}
  onModalHide={[Function]}
>
  <WithTheme(ModalHeader)
    isClosable={true}
    onClose={[MockFunction]}
  >
    <FormattedMessage
      id="test_title_id"
    />
  </WithTheme(ModalHeader)>
  <ModalBody>
    <Styled(Text)
      key="test_body_1"
    >
      <FormattedMessage
        id="test_body_1"
      />
    </Styled(Text)>
    <Styled(Text)
      key="test_body_1"
    >
      <FormattedMessage
        id="test_body_1"
      />
    </Styled(Text)>
  </ModalBody>
  <ModalFooter>
    <Button
      disabled={false}
      isBorder={false}
      isLoading={false}
      isMarginBottom={false}
      isMarginRight={true}
      isOutline={true}
      isSmallHeight={false}
      isSmallWidth={true}
      onPress={[MockFunction]}
    >
      <FormattedMessage
        id="shared.cancel"
      />
    </Button>
    <Button
      disabled={false}
      fillColor="[mocked red500]"
      isBorder={false}
      isLoading={false}
      isMarginBottom={false}
      isMarginRight={false}
      isOutline={false}
      isSmallHeight={false}
      isSmallWidth={false}
    >
      <FormattedMessage
        id="test_confirm_id"
      />
    </Button>
  </ModalFooter>
</ModalView>
`;
